Set VERSION using cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(luachess)
+SET(PACKAGE_NAME "luachess")
+SET(VERSION "0.02")
 
 # {{{ Check for Lua
 FIND_PACKAGE(Lua51 REQUIRED)
