--- a/src/fics/config.h.in
+++ b/src/fics/config.h.in
@@ -1,4 +1,4 @@
-/* config.h.in for luachess.chess
+/* config.h.in for luachess.fics
  * vim: set et ts=4 sts=4 sw=4 fdm=syntax :
  *
  * Copyright (c) 2009 Ali Polatel <polatel@gmail.com>
@@ -22,8 +22,5 @@
 
 #define PACKAGE_NAME "@PACKAGE_NAME@"
 #define VERSION "@VERSION@"
-#cmakedefine HAVE_SNPRINTF
-#cmakedefine HAVE_STRTOULL
-#cmakedefine HAVE_UNSIGNED_LONG_LONG_INT
 
 #endif /* LUACHESS_GUARD_CONFIG_H */
