Make luachess.fics optional, add WITH_FICS option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,4 +44,10 @@ ENABLE_TESTING()
 SET(LUNIT ${PROJECT_SOURCE_DIR}/test/lunit/lunit)
 SET(TEST_DIR ${PROJECT_SOURCE_DIR}/test)
 #}}}
-ADD_SUBDIRECTORY(src)
+
+OPTION(WITH_FICS "Build luachess.fics module" ON)
+
+ADD_SUBDIRECTORY(src/chess)
+IF(WITH_FICS)
+    ADD_SUBDIRECTORY(src/fics)
+ENDIF(WITH_FICS)
