Make ficsutils.c work on Windoze (not tested)

--- a/src/fics/config.h.in
+++ b/src/fics/config.h.in
@@ -22,5 +22,7 @@
 
 #define PACKAGE_NAME "@PACKAGE_NAME@"
 #define VERSION "@VERSION@"
+#cmakedefine HAVE_PWUID
+#cmakedefine HAVE_GETUSERNAME
 
 #endif /* LUACHESS_GUARD_CONFIG_H */
