Switch to LuaUnit for unit testing. lunit sucks. Add custom loaders for tests so that they work fine from source directory. fix some tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,8 @@ ENDIF(HAS_CFLAG_WINLINE)
 # }}}
 # {{{ Testing
 ENABLE_TESTING()
-SET(LUNIT ${PROJECT_SOURCE_DIR}/test/lunit/lunit)
 SET(TEST_DIR ${PROJECT_SOURCE_DIR}/test)
+SET(GET_LUAUNIT "package.path = [[${TEST_DIR}/?.lua;]] .. package.path")
 #}}}
 
 OPTION(WITH_FICS "Build luachess.fics module" ON)
