--- a/src/chess/CMakeLists.txt
+++ b/src/chess/CMakeLists.txt
@@ -3,48 +3,49 @@
 # Copyright (c) 2009 Ali Polatel <polatel@gmail.com>
 # Distributed under the terms of the GNU General Public License v2
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+cmake_minimum_required(VERSION 2.6)
 
 # {{{ Checks
-INCLUDE(CheckFunctionExists)
-CHECK_FUNCTION_EXISTS(snprintf HAVE_SNPRINTF)
-CHECK_FUNCTION_EXISTS(strtoull HAVE_STRTOULL)
-INCLUDE(CheckTypeSize)
-CHECK_TYPE_SIZE("unsigned long long int" HAVE_UNSIGNED_LONG_LONG_INT)
+include(CheckFunctionExists)
+check_function_exists(snprintf HAVE_SNPRINTF)
+check_function_exists(strtoull HAVE_STRTOULL)
+include(CheckTypeSize)
+check_type_size("unsigned long long int" HAVE_UNSIGNED_LONG_LONG_INT)
 # }}}
 
 # {{{ Modules
-SET(chess_bitboard bitboard.h bitboard.c)
-ADD_LIBRARY(chess_bitboard MODULE ${chess_bitboard})
-SET_TARGET_PROPERTIES(chess_bitboard PROPERTIES
+set(chess_bitboard bitboard.h bitboard.c)
+add_library(chess_bitboard MODULE ${chess_bitboard})
+set_target_properties(chess_bitboard PROPERTIES
         PREFIX ""
         OUTPUT_NAME "bitboard"
 )
 
-SET(chess_attack bitboard.h attack.c magicmoves.h magicmoves.c)
-ADD_LIBRARY(chess_attack MODULE ${chess_attack})
-SET_TARGET_PROPERTIES(chess_attack PROPERTIES
+set(chess_attack bitboard.h attack.c magicmoves.h magicmoves.c)
+add_library(chess_attack MODULE ${chess_attack})
+set_target_properties(chess_attack PROPERTIES
         PREFIX ""
         OUTPUT_NAME "attack"
 )
 
-SET(chess ${PROJECT_SOURCE_DIR}/src/chess/chess.lua)
-SET(chess_move ${PROJECT_SOURCE_DIR}/src/chess/move.lua)
+set(chess ${PROJECT_SOURCE_DIR}/src/chess/chess.lua)
+set(chess_move ${PROJECT_SOURCE_DIR}/src/chess/move.lua)
 # }}}
 
 # {{{ Tests
-ADD_TEST(bitboard lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-bitboard.lua)
-ADD_TEST(attack lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-attack.lua)
-ADD_TEST(move lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-move.lua)
-ADD_TEST(chess lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-chess.lua)
-ADD_TEST(chessboard lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-chess-board.lua)
+add_test(bitboard lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-bitboard.lua)
+add_test(attack lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-attack.lua)
+add_test(move lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-move.lua)
+add_test(chess lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-chess.lua)
+add_test(chessboard lua -e ${GET_LUAUNIT} ${TEST_DIR}/chess/test-chess-board.lua)
 # }}}
 
 # Output
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
         ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 # Install
-INSTALL(TARGETS chess_bitboard chess_attack DESTINATION ${LUAPACKAGE_CDIR}/chess)
-INSTALL(FILES ${chess} DESTINATION ${LUAPACKAGE_LDIR})
-INSTALL(FILES ${chess_move} DESTINATION ${LUAPACKAGE_LDIR}/chess)
+install(TARGETS chess_bitboard chess_attack DESTINATION ${LUAPACKAGE_CDIR}/chess)
+install(FILES ${chess} DESTINATION ${LUAPACKAGE_LDIR})
+install(FILES ${chess_move} DESTINATION ${LUAPACKAGE_LDIR}/chess)
+
