--- a/src/icc/CMakeLists.txt
+++ b/src/icc/CMakeLists.txt
@@ -3,11 +3,12 @@
 # Copyright (c) 2009 Ali Polatel <polatel@gmail.com>
 # Distributed under the terms of the GNU General Public License v2
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+cmake_minimum_required(VERSION 2.6)
 
-SET(chess_icc ${PROJECT_SOURCE_DIR}/src/icc/icc.lua)
-SET(chess_icc_parser ${PROJECT_SOURCE_DIR}/src/icc/parser.lua)
+set(chess_icc ${PROJECT_SOURCE_DIR}/src/icc/icc.lua)
+set(chess_icc_parser ${PROJECT_SOURCE_DIR}/src/icc/parser.lua)
 
 # Install
-INSTALL(FILES ${chess_icc} DESTINATION ${LUAPACKAGE_LDIR}/chess)
-INSTALL(FILES ${chess_icc_parser} DESTINATION ${LUAPACKAGE_LDIR}/chess/icc)
+install(FILES ${chess_icc} DESTINATION ${LUAPACKAGE_LDIR}/chess)
+install(FILES ${chess_icc_parser} DESTINATION ${LUAPACKAGE_LDIR}/chess/icc)
+
