More compiler flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,22 +22,35 @@ include_directories(
 # }}}
 # {{{ Set extra CFLAGS
 include(CheckCCompilerFlag)
-check_c_compiler_flag("-std=c99" HAS_CFLAG_STD_C99)
-if(HAS_CFLAG_STD_C99)
-    add_definitions("-std=c99")
-endif(HAS_CFLAG_STD_C99)
-check_c_compiler_flag("-W" HAS_CFLAG_W)
-if(HAS_CFLAG_W)
-    add_definitions("-W")
-endif(HAS_CFLAG_W)
-check_c_compiler_flag("-Wall" HAS_CFLAG_WALL)
-if(HAS_CFLAG_WALL)
-    add_definitions("-Wall")
-endif(HAS_CFLAG_WALL)
-check_c_compiler_flag("-Winline" HAS_CFLAG_WINLINE)
-if(HAS_CFLAG_WINLINE)
-    add_definitions("-Winline")
-endif(HAS_CFLAG_WINLINE)
+macro(add_c_compiler_flag flag)
+    check_c_compiler_flag(${flag} HAS_${flag})
+    if(HAS_${flag})
+        add_definitions(${flag})
+    endif(HAS_${flag})
+endmacro()
+set(WANTED_CFLAGS
+    "-std=c99"               # LuaChess requires a compiler that supports C99.
+    "-pedantic"              # Issue all the warnings demanded by strict ISO C and ISO C++.
+    "-W" "-Wall" "-Wextra"   # Enable all warnings.
+    "-Winline"               # Warn if a function can't be inlined.
+    "-Wvla"                  # Warn if variable length array is used in the code.
+    "-Wformat=2"             # Enable -Wformat plus format checks not included in -Wformat.
+    "-Wformat-security"      # Warn about uses of format functions that represent possible security problems.
+    "-Wformat-nonliteral"    # Warn if the format string is not a string literal.
+    "-Wlogical-op"           # Warn about suspicious uses of logical operators in expressions.
+    "-Winit-self"            # Warn about uninitialized variables which are initialized with themselves.
+    "-Wpointer-arith"        # Warn about anything that depends on the "size of" a function type or of "void".
+    "-Wfloat-equal"          # Warn if floating point values are used in equality comparisons.
+    "-Wmissing-prototypes"   # Warn if a global function is defined without a previous prototype declaration.
+    "-Wmissing-declarations" # Warn if a global function is defined without a previous declaration.
+    "-Wredundant-decls"      # Warn if anything is declared more than once in the same scope.
+    "-Wmissing-noreturn"     # Warn about functions which might be candidates for attribute "noreturn".
+    "-Wshadow"               # Warn whenever a local variable shadows another local variable.
+    "-Wcast-align"           # Warn whenever a pointer is cast such that the required alignment is increased.
+)
+foreach(cflag ${WANTED_CFLAGS})
+    add_c_compiler_flag(${cflag})
+endforeach(cflag ${WANTED_CFLAGS})
 # }}}
 # {{{ Testing
 enable_testing()
