--- a/src/icc/CMakeLists.txt
+++ b/src/icc/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeLists.txt for luachess.fics
+# CMakeLists.txt for luachess.icc
 # vim: set sw=4 sts=4 et ft=cmake foldmethod=marker foldmarker={{{,}}} :
 # Copyright (c) 2009 Ali Polatel <polatel@gmail.com>
 # Distributed under the terms of the GNU General Public License v2
